# backend-app-fastapi-sqlite

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/api/: main.py
app/api/api_v1/endpoints/: login.py  users.py
app/api/auth/: auths.py
app/api/backup/: config.py  create_admin.py  database.py  dependencies.py  seg.py  tokenizer.py
app/api/backup/dicts/: disease.txt  drug.txt  mtest.txt  symptom.txt
app/api/backup/routers/: admin.py  knowledgebases.py  tasks.py  users.py
app/api/backup/sql/: 111main.py  crud.py  database.py  models.py  schemas.py
app/api/backup/sql/data/: 国家药品编码本位码信息（进口药品）.xls  药品名称词汇.csv
app/api/backup/sql/scripts/: json2sqlite.py  xls2sqlite.py
app/core/: config.py
app/db/: base_class.py  init_db.py
